認証ロジック追加(秘書のみ)

--- a/pom.xml
+++ b/pom.xml
@@ -104,16 +104,23 @@
             <version>${postgresql.version}</version>
         </dependency>
         <!-- Excel (Apache POI) -->
-		    <dependency>
-		      <groupId>org.apache.poi</groupId>
-		      <artifactId>poi-ooxml</artifactId>
-		      <version>5.4.1</version>
-		    </dependency>
-		    <dependency>
-		      <groupId>org.apache.poi</groupId>
-		      <artifactId>poi-ooxml-full</artifactId>
-		      <version>5.4.1</version>
-		    </dependency>
+	    <dependency>
+	      <groupId>org.apache.poi</groupId>
+	      <artifactId>poi-ooxml</artifactId>
+	      <version>5.4.1</version>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.apache.poi</groupId>
+	      <artifactId>poi-ooxml-full</artifactId>
+	      <version>5.4.1</version>
+	    </dependency>
+	    
+	    <!-- BCrypt for password hashing -->
+	    <dependency>
+	      <groupId>org.mindrot</groupId>
+	      <artifactId>jbcrypt</artifactId>
+	      <version>0.4</version>
+	    </dependency>
     </dependencies>
    
 </project>
