--- a/pom.xml
+++ b/pom.xml
@@ -90,12 +90,20 @@
             <artifactId>postgresql</artifactId>
             <version>${postgresql.version}</version>
         </dependency>
+        
+        <!-- HikariCP Connection Pool -->
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.1.0</version>
+        </dependency>
+        
         <!-- Excel (Apache POI) -->
-		    <dependency>
-		      <groupId>org.apache.poi</groupId>
-		      <artifactId>poi-ooxml</artifactId>
-		      <version>5.4.1</version>
-		    </dependency>
+	    <dependency>
+	      <groupId>org.apache.poi</groupId>
+	      <artifactId>poi-ooxml</artifactId>
+	      <version>5.4.1</version>
+	    </dependency>
 		    <dependency>
 		      <groupId>org.apache.poi</groupId>
 		      <artifactId>poi-ooxml-full</artifactId>
