--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -39,6 +39,21 @@
                 "focus": false,
                 "panel": "shared"
             }
+        },
+        {
+            "label": "Tomcat Debug Deploy",
+            "type": "shell",
+            "command": "mvnDebug",
+            "args": ["cargo:run"],
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            },
+            "problemMatcher": [],
+            "isBackground": true
         }
     ]
 }
