ログイン修正/ログアウト追加

--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,12 @@
 		      <artifactId>poi-ooxml-full</artifactId>
 		      <version>5.4.1</version>
 		    </dependency>
+		    <!-- BCrypt for password hashing -->
+		    <dependency>
+		      <groupId>org.mindrot</groupId>
+		      <artifactId>jbcrypt</artifactId>
+		      <version>0.4</version>
+		    </dependency>
     </dependencies>
    
 </project>
