--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
          metadata-complete="false">
 
   <display-name>Hidariude Web Application</display-name>
-  <description>左手Web管理システム</description>
+  <description>ヒダリウデWeb管理システム</description>
 
   <!-- Database Initialization Listener -->
   <listener>
