--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -54,6 +54,21 @@
             },
             "problemMatcher": [],
             "isBackground": true
+        },
+        {
+            "label": "Build and Deploy",
+            "dependsOrder": "sequence",
+            "dependsOn": ["Maven Clean", "Maven Package", "Tomcat Deploy"],
+            "group": {
+                "kind": "build",
+                "isDefault": true
+            },
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": false,
+                "panel": "shared"
+            }
         }
     ]
 }
