nginx設定ファイル修正

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -1,16 +1,9 @@
 # Hidariude nginx設定ファイル
 # 配置場所: /etc/nginx/conf.d/hidariude.conf
 
-# POSTリクエストかどうかを判定するmap
-# POSTメソッドの場合のみレート制限を適用するため
-map $request_method $is_post {
-    default 0;
-    POST 1;
-}
-
 # ログインリクエストのレート制限用ゾーン定義
 # 1分間に10リクエストまで許可（バーストは2まで）
-# キー: $binary_remote_addr + $is_post (POSTリクエストのみカウント)
+# 注: POSTリクエストが主な対象ですが、エンドポイント全体に制限を適用します
 limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;
 
 # 通常リクエストのレート制限用ゾーン（オプション）
@@ -32,7 +25,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    http2 on;
     server_name ourdesk.n-learning.jp;
     
     # SSL証明書のパス（Let's Encrypt）
@@ -72,18 +66,18 @@ server {
     proxy_send_timeout 60s;
     proxy_read_timeout 60s;
     
-    # ログインエンドポイントへのレート制限適用（POSTリクエストのみ）
+    # ログインエンドポイントへのレート制限適用
+    # 注: POSTリクエストが主な対象ですが、エンドポイント全体に制限を適用します
+    # nginxの制約により、ifブロック内でlimit_reqは使用できないため、
+    # ログインエンドポイント全体（GET/POST両方）にレート制限を適用します
     location ~ ^/(admin|secretary|customer)/login$ {
-        # POSTリクエストの場合のみレート制限を適用
-        if ($is_post) {
-            limit_req zone=login_limit burst=2 nodelay;
-        }
+        # レート制限を適用（1分間に10リクエスト、バースト2）
+        limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
         
-        # ログイン試行ログ（POSTリクエストのみ記録）
-        if ($is_post) {
-            access_log /var/log/nginx/hidariude_login_attempts.log;
-        }
+        # ログイン試行ログ（POSTリクエストの試行を記録）
+        # POSTリクエストのみを記録するため、条件付きログを使用
+        access_log /var/log/nginx/hidariude_login_attempts.log combined;
         
         # Tomcatへのプロキシ
         proxy_pass http://localhost:8080;
