設定ファイルを修正(プロキシパス)

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -79,8 +79,8 @@ server {
         # POSTリクエストのみを記録するため、条件付きログを使用
         access_log /var/log/nginx/hidariude_login_attempts.log combined;
         
-        # Tomcatへのプロキシ
-        proxy_pass http://localhost:8080;
+        # Tomcatへのプロキシ（コンテキストパス/hidariudeを指定）
+        proxy_pass http://localhost:8080/hidariude;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
@@ -97,8 +97,8 @@ server {
         # 一般的なレート制限（オプション、必要に応じて有効化）
         # limit_req zone=general_limit burst=20 nodelay;
         
-        # Tomcatへのプロキシ
-        proxy_pass http://localhost:8080;
+        # Tomcatへのプロキシ（コンテキストパス/hidariudeを指定）
+        proxy_pass http://localhost:8080/hidariude;
     }
 }
 
