nginxの設定を再度修正

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -79,8 +79,11 @@ server {
         # POSTリクエストのみを記録するため、条件付きログを使用
         access_log /var/log/nginx/hidariude_login_attempts.log combined;
         
-        # Tomcatへのプロキシ（コンテキストパス/hidariudeを指定）
-        proxy_pass http://localhost:8080/hidariude;
+        # コンテキストパス/hidariudeを先頭に追加
+        rewrite ^(.*)$ /hidariude$1 break;
+        
+        # Tomcatへのプロキシ（正規表現location内ではURI部分を含められないためrewriteを使用）
+        proxy_pass http://localhost:8080;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
