nginxの設定を再度修正

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -101,7 +101,8 @@ server {
         # limit_req zone=general_limit burst=20 nodelay;
         
         # Tomcatへのプロキシ（コンテキストパス/hidariudeを指定）
-        proxy_pass http://localhost:8080/hidariude;
+        # 末尾にスラッシュを付けることで、リクエストURIがそのまま追加される
+        proxy_pass http://localhost:8080/hidariude/;
     }
 }
 
