nginxの設定を再度修正

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -95,14 +95,27 @@ server {
         return 429 '{"error":"Too many login attempts. Please try again later."}';
     }
     
-    # その他のすべてのリクエスト
+    # /hidariudeで始まるパスは、そのまま転送（二重にならないように）
+    location ^~ /hidariude {
+        # 一般的なレート制限（オプション、必要に応じて有効化）
+        # limit_req zone=general_limit burst=20 nodelay;
+        
+        # /hidariudeを削除して転送（/hidariude/admin → /admin → /hidariude/admin）
+        rewrite ^/hidariude(.*)$ $1 break;
+        
+        # Tomcatへのプロキシ（コンテキストパス/hidariudeを追加）
+        proxy_pass http://localhost:8080/hidariude;
+    }
+    
+    # その他のすべてのリクエスト（/で始まり、/hidariudeで始まらない）
     location / {
         # 一般的なレート制限（オプション、必要に応じて有効化）
         # limit_req zone=general_limit burst=20 nodelay;
         
-        # Tomcatへのプロキシ（コンテキストパス/hidariudeを指定）
-        # 末尾にスラッシュを付けることで、リクエストURIがそのまま追加される
-        proxy_pass http://localhost:8080/hidariude/;
+        # Tomcatへのプロキシ（コンテキストパス/hidariudeを先頭に追加）
+        # 末尾スラッシュなしで、リクエストURI全体が追加される
+        # /admin → /hidariude/admin, / → /hidariude/
+        proxy_pass http://localhost:8080/hidariude;
     }
 }
 
