nginxのプロキシ先を変更

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -95,19 +95,23 @@ server {
         return 429 '{"error":"Too many login attempts. Please try again later."}';
     }
     
-    # /hidariudeで始まるパスは、そのまま転送（二重にならないように）
-    location ^~ /hidariude {
-        # 一般的なレート制限（オプション、必要に応じて有効化）
-        # limit_req zone=general_limit burst=20 nodelay;
+    # ログイン画面(GET)のレート制限
+    location ~ ^/(admin|secretary|customer)$ {
+        # レート制限を適用（1分間に10リクエスト、バースト2）
+        limit_req zone=login_limit burst=2 nodelay;
+        limit_req_status 429;
         
-        # /hidariudeを削除して転送（/hidariude/admin → /admin → /hidariude/admin）
-        rewrite ^/hidariude(.*)$ $1 break;
+        # コンテキストパス/hidariudeを先頭に追加
+        rewrite ^(.*)$ /hidariude$1 break;
         
-        # Tomcatへのプロキシ（コンテキストパス/hidariudeを追加）
-        proxy_pass http://localhost:8080/hidariude;
+        # Tomcatへのプロキシ
+        proxy_pass http://localhost:8080;
+        
+        # エラーページ（429 Too Many Requests）
+        error_page 429 @ratelimit;
     }
     
-    # その他のすべてのリクエスト（/で始まり、/hidariudeで始まらない）
+    # その他のすべてのリクエスト
     location / {
         # 一般的なレート制限（オプション、必要に応じて有効化）
         # limit_req zone=general_limit burst=20 nodelay;
