ルートパスのリダイレクト特別処理を追加

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -61,6 +61,13 @@ server {
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
     
+    # リダイレクトレスポンスの修正
+    # Tomcatからのリダイレクト（/hidariude/...）を外部から見えるパス（/...）に変換
+    proxy_redirect /hidariude/ /;
+    proxy_redirect /hidariude /;
+    proxy_redirect http://localhost:8080/hidariude/ /;
+    proxy_redirect http://localhost:8080/hidariude /;
+    
     # タイムアウト設定
     proxy_connect_timeout 60s;
     proxy_send_timeout 60s;
@@ -111,6 +118,12 @@ server {
         error_page 429 @ratelimit;
     }
     
+    # ルートパス（/）の特別処理
+    location = / {
+        # Tomcatへのプロキシ（ルートパスを/hidariude/に変換）
+        proxy_pass http://localhost:8080/hidariude/;
+    }
+    
     # その他のすべてのリクエスト
     location / {
         # 一般的なレート制限（オプション、必要に応じて有効化）
@@ -118,7 +131,7 @@ server {
         
         # Tomcatへのプロキシ（コンテキストパス/hidariudeを先頭に追加）
         # 末尾スラッシュなしで、リクエストURI全体が追加される
-        # /admin → /hidariude/admin, / → /hidariude/
+        # /admin → /hidariude/admin
         proxy_pass http://localhost:8080/hidariude;
     }
 }
