ルート以外のパスにリダイレクト処理を追加

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -118,6 +118,15 @@ server {
         error_page 429 @ratelimit;
     }
     
+    # /hidariudeで始まるパスの処理（リダイレクトなどで生成された場合に対応）
+    location ^~ /hidariude {
+        # /hidariudeを削除して転送（/hidariude/admin → /admin → /hidariude/admin）
+        rewrite ^/hidariude(.*)$ $1 break;
+        
+        # Tomcatへのプロキシ（コンテキストパス/hidariudeを追加）
+        proxy_pass http://localhost:8080/hidariude;
+    }
+    
     # ルートパス（/）の特別処理
     location = / {
         # Tomcatへのプロキシ（ルートパスを/hidariude/に変換）
