nginxの記述をシンプルな形に修正

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -3,7 +3,6 @@
 
 # ログインリクエストのレート制限用ゾーン定義
 # 1分間に10リクエストまで許可（バーストは2まで）
-# 注: POSTリクエストが主な対象ですが、エンドポイント全体に制限を適用します
 limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;
 
 # 通常リクエストのレート制限用ゾーン（オプション）
@@ -73,24 +72,17 @@ server {
     proxy_send_timeout 60s;
     proxy_read_timeout 60s;
     
-    # ログインエンドポイントへのレート制限適用
-    # 注: POSTリクエストが主な対象ですが、エンドポイント全体に制限を適用します
-    # nginxの制約により、ifブロック内でlimit_reqは使用できないため、
-    # ログインエンドポイント全体（GET/POST両方）にレート制限を適用します
+    # ログインPOSTエンドポイントへのレート制限適用
     location ~ ^/(admin|secretary|customer)/login$ {
         # レート制限を適用（1分間に10リクエスト、バースト2）
         limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
         
-        # ログイン試行ログ（POSTリクエストの試行を記録）
-        # POSTリクエストのみを記録するため、条件付きログを使用
+        # ログイン試行ログ
         access_log /var/log/nginx/hidariude_login_attempts.log combined;
         
-        # コンテキストパス/hidariudeを先頭に追加
-        rewrite ^(.*)$ /hidariude$1 break;
-        
-        # Tomcatへのプロキシ（正規表現location内ではURI部分を含められないためrewriteを使用）
-        proxy_pass http://localhost:8080;
+        # Tomcatへのプロキシ（/hidariudeを追加）
+        proxy_pass http://localhost:8080/hidariude$request_uri;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
@@ -102,29 +94,23 @@ server {
         return 429 '{"error":"Too many login attempts. Please try again later."}';
     }
     
-    # ログイン画面(GET)のレート制限
+    # ログイン画面(GET)へのレート制限適用
     location ~ ^/(admin|secretary|customer)$ {
         # レート制限を適用（1分間に10リクエスト、バースト2）
         limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
         
-        # コンテキストパス/hidariudeを先頭に追加
-        rewrite ^(.*)$ /hidariude$1 break;
-        
-        # Tomcatへのプロキシ
-        proxy_pass http://localhost:8080;
+        # Tomcatへのプロキシ（/hidariudeを追加）
+        proxy_pass http://localhost:8080/hidariude$request_uri;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
     }
     
-    # /hidariudeで始まるパスの処理（リダイレクトなどで生成された場合に対応）
+    # /hidariudeで始まるパスの処理（index.jspからのリンクなどで生成される場合に対応）
     location ^~ /hidariude {
-        # /hidariudeを削除して転送（/hidariude/admin → /admin → /hidariude/admin）
-        rewrite ^/hidariude(.*)$ $1 break;
-        
-        # Tomcatへのプロキシ（コンテキストパス/hidariudeを追加）
-        proxy_pass http://localhost:8080/hidariude;
+        # そのままTomcatに転送（/hidariudeは既に含まれているので追加しない）
+        proxy_pass http://localhost:8080;
     }
     
     # ルートパス（/）の特別処理
@@ -138,10 +124,8 @@ server {
         # 一般的なレート制限（オプション、必要に応じて有効化）
         # limit_req zone=general_limit burst=20 nodelay;
         
-        # Tomcatへのプロキシ（コンテキストパス/hidariudeを先頭に追加）
-        # 末尾スラッシュなしで、リクエストURI全体が追加される
-        # /admin → /hidariude/admin
-        proxy_pass http://localhost:8080/hidariude;
+        # Tomcatへのプロキシ（/hidariudeを追加）
+        proxy_pass http://localhost:8080/hidariude$request_uri;
     }
 }
 
