nginx経由も/hidariudeに方針変更

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -17,9 +17,9 @@ server {
         root /var/www/certbot;
     }
     
-    # HTTPからHTTPSへのリダイレクト
+    # HTTPからHTTPSへのリダイレクト（/hidariudeを含める）
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://$host/hidariude$request_uri;
     }
 }
 
@@ -60,20 +60,13 @@ server {
     proxy_set_header X-Forwarded-Host $host;
     proxy_set_header X-Forwarded-Port $server_port;
     
-    # リダイレクトレスポンスの修正
-    # Tomcatからのリダイレクト（/hidariude/...）を外部から見えるパス（/...）に変換
-    proxy_redirect /hidariude/ /;
-    proxy_redirect /hidariude /;
-    proxy_redirect http://localhost:8080/hidariude/ /;
-    proxy_redirect http://localhost:8080/hidariude /;
-    
     # タイムアウト設定
     proxy_connect_timeout 60s;
     proxy_send_timeout 60s;
     proxy_read_timeout 60s;
     
     # ログインPOSTエンドポイントへのレート制限適用
-    location ~ ^/(admin|secretary|customer)/login$ {
+    location ~ ^/hidariude/(admin|secretary|customer)/login$ {
         # レート制限を適用（1分間に10リクエスト、バースト2）
         limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
@@ -81,8 +74,8 @@ server {
         # ログイン試行ログ
         access_log /var/log/nginx/hidariude_login_attempts.log combined;
         
-        # Tomcatへのプロキシ（/hidariudeを追加）
-        proxy_pass http://localhost:8080/hidariude$request_uri;
+        # Tomcatへのプロキシ（/hidariudeを含むパスをそのまま転送）
+        proxy_pass http://localhost:8080;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
@@ -95,37 +88,30 @@ server {
     }
     
     # ログイン画面(GET)へのレート制限適用
-    location ~ ^/(admin|secretary|customer)$ {
+    location ~ ^/hidariude/(admin|secretary|customer)$ {
         # レート制限を適用（1分間に10リクエスト、バースト2）
         limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
         
-        # Tomcatへのプロキシ（/hidariudeを追加）
-        proxy_pass http://localhost:8080/hidariude$request_uri;
+        # Tomcatへのプロキシ（/hidariudeを含むパスをそのまま転送）
+        proxy_pass http://localhost:8080;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
     }
     
-    # /hidariudeで始まるパスの処理（index.jspからのリンクなどで生成される場合に対応）
-    location ^~ /hidariude {
-        # そのままTomcatに転送（/hidariudeは既に含まれているので追加しない）
-        proxy_pass http://localhost:8080;
-    }
-    
-    # ルートパス（/）の特別処理
-    location = / {
-        # Tomcatへのプロキシ（ルートパスを/hidariude/に変換）
-        proxy_pass http://localhost:8080/hidariude/;
-    }
-    
-    # その他のすべてのリクエスト
-    location / {
+    # /hidariudeで始まるすべてのリクエスト
+    location /hidariude {
         # 一般的なレート制限（オプション、必要に応じて有効化）
         # limit_req zone=general_limit burst=20 nodelay;
         
-        # Tomcatへのプロキシ（/hidariudeを追加）
-        proxy_pass http://localhost:8080/hidariude$request_uri;
+        # Tomcatへのプロキシ（/hidariudeを含むパスをそのまま転送）
+        proxy_pass http://localhost:8080;
+    }
+    
+    # その他のリクエスト（/hidariudeで始まらない場合）
+    location / {
+        return 301 https://$host/hidariude/;
     }
 }
 
