管理者管理の機能定義書を追加

--- a/nginx/hidariude.conf
+++ b/nginx/hidariude.conf
@@ -3,6 +3,8 @@
 
 # ログインリクエストのレート制限用ゾーン定義
 # 1分間に10リクエストまで許可（バーストは2まで）
+# $binary_remote_addr: クライアントのIPアドレス（IPv4/IPv6のバイナリ形式）
+# 各IPアドレスごとに独立してレート制限が適用される
 limit_req_zone $binary_remote_addr zone=login_limit:10m rate=10r/m;
 
 # 通常リクエストのレート制限用ゾーン（オプション）
