プロジェクト名をBackDeskに修正

--- a/nginx/BackDesk.conf
+++ b/nginx/BackDesk.conf
@@ -1,5 +1,5 @@
-# Hidariude nginx設定ファイル
-# 配置場所: /etc/nginx/conf.d/hidariude.conf
+# BackDesk nginx設定ファイル
+# 配置場所: /etc/nginx/conf.d/BackDesk.conf
 
 # ログインリクエストのレート制限用ゾーン定義
 # 1分間に10リクエストまで許可（バーストは2まで）
@@ -19,9 +19,12 @@ server {
         root /var/www/certbot;
     }
     
-    # HTTPからHTTPSへのリダイレクト（/hidariudeを含める）
+    # HTTPからHTTPSへのリダイレクト（/BackDeskを含める）
     location / {
-        return 301 https://$host/hidariude$request_uri;
+        if ($request_uri ~ "^/api") {
+            return 301 https://$host$request_uri;
+        }
+        return 301 https://$host/BackDesk$request_uri;
     }
 }
 
@@ -48,8 +51,8 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     
     # ログ設定
-    access_log /var/log/nginx/hidariude_access.log;
-    error_log /var/log/nginx/hidariude_error.log;
+    access_log /var/log/nginx/BackDesk_access.log;
+    error_log /var/log/nginx/BackDesk_error.log;
     
     # クライアントボディサイズ制限
     client_max_body_size 10M;
@@ -68,15 +71,15 @@ server {
     proxy_read_timeout 60s;
     
     # ログインPOSTエンドポイントへのレート制限適用
-    location ~ ^/hidariude/(admin|secretary|customer)/login$ {
+    location ~ ^/BackDesk/(admin|secretary|customer)/login$ {
         # レート制限を適用（1分間に10リクエスト、バースト2）
         limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
         
         # ログイン試行ログ
-        access_log /var/log/nginx/hidariude_login_attempts.log combined;
+        access_log /var/log/nginx/BackDesk_login_attempts.log combined;
         
-        # Tomcatへのプロキシ（/hidariudeを含むパスをそのまま転送）
+        # Tomcatへのプロキシ（/BackDeskを含むパスをそのまま転送）
         proxy_pass http://localhost:8080;
         
         # エラーページ（429 Too Many Requests）
@@ -90,30 +93,30 @@ server {
     }
     
     # ログイン画面(GET)へのレート制限適用
-    location ~ ^/hidariude/(admin|secretary|customer)$ {
+    location ~ ^/BackDesk/(admin|secretary|customer)$ {
         # レート制限を適用（1分間に10リクエスト、バースト2）
         limit_req zone=login_limit burst=2 nodelay;
         limit_req_status 429;
         
-        # Tomcatへのプロキシ（/hidariudeを含むパスをそのまま転送）
+        # Tomcatへのプロキシ（/BackDeskを含むパスをそのまま転送）
         proxy_pass http://localhost:8080;
         
         # エラーページ（429 Too Many Requests）
         error_page 429 @ratelimit;
     }
     
-    # /hidariudeで始まるすべてのリクエスト
-    location /hidariude {
+    # /BackDeskで始まるすべてのリクエスト
+    location /BackDesk {
         # 一般的なレート制限（オプション、必要に応じて有効化）
         # limit_req zone=general_limit burst=20 nodelay;
         
-        # Tomcatへのプロキシ（/hidariudeを含むパスをそのまま転送）
+        # Tomcatへのプロキシ（/BackDeskを含むパスをそのまま転送）
         proxy_pass http://localhost:8080;
     }
     
-    # その他のリクエスト（/hidariudeで始まらない場合）
+    # その他のリクエスト（/BackDeskで始まらない場合）
     location / {
-        return 301 https://$host/hidariude/;
+        return 301 https://$host/BackDesk/;
     }
 }
 
