--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>hidariude</groupId>
-  <artifactId>hidariude</artifactId>
+  <groupId>BackDesk</groupId>
+  <artifactId>BackDesk</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   <build>
@@ -49,7 +49,7 @@
                       <artifactId>${project.artifactId}</artifactId>
                       <type>war</type>
                       <properties>
-                          <context>/hidariude</context>
+                          <context>/BackDesk</context>
                       </properties>
                   </deployable>
               </deployables>
